start game function fixed

--- a/index.html
+++ b/index.html
@@ -10,24 +10,39 @@
     <title>Document</title>
 </head>
 <body id="body">
-<!-- Create Header elements for page -->
+<!-- Create Header element for page -->
     <h1>Final Fantasy Game!</h1>
-
-    <div class="heroselector">
+<!-- set up button images for each section -->
+    <div id="heroselector">
         <h3>Choose your Hero!</h3>
-        <button onclick=""><img id = "cloud" src = "./assets/images/Cloud.jpg.jpg"></button>
-        <button onclick=""><img id = "squall" src = "./assets/images/Squall.jpg.png"></button>
-        <button onclick=""><img id = "tidus" src = "./assets/images/Tidus.jpg.png"></button>
-        <button onclick=""><img id = "noctis" src = "./assets/images/Noctis.jpg.jpg"></button>
+        <button><img id = "cloud" src = "./assets/images/Cloud.jpg.jpg"></button>
+        <button><img id = "squall" src = "./assets/images/Squall.jpg.png"></button>
+        <button><img id = "tidus" src = "./assets/images/Tidus.jpg.png"></button>
+        <button><img id = "noctis" src = "./assets/images/Noctis.jpg.jpg"></button>
     </div>
-    <div class="enemyselector">
+    <div id="enemyselector">
         <h3>Enemies!</h3>
+        <button><img id = "cloud" src = "./assets/images/Cloud.jpg.jpg"></button>
+        <button><img id = "squall" src = "./assets/images/Squall.jpg.png"></button>
+        <button><img id = "tidus" src = "./assets/images/Tidus.jpg.png"></button>
+        <button><img id = "noctis" src = "./assets/images/Noctis.jpg.jpg"></button>
     </div>
-    <div class="movessection">
+    <div id="movessection">
         <h3>Moves!</h3>
     </div>
-    <div class="enemysection">
-    <h3>Hero!</h3>
+    <div id="enemysection">
+        <h3>Enemy!</h3>
+        <button><img id = "cloud" src = "./assets/images/Cloud.jpg.jpg"></button>
+        <button><img id = "squall" src = "./assets/images/Squall.jpg.png"></button>
+        <button><img id = "tidus" src = "./assets/images/Tidus.jpg.png"></button>
+        <button><img id = "noctis" src = "./assets/images/Noctis.jpg.jpg"></button>
+    </div>
+    <div id="herosection">
+        <h3>Hero!</h3>
+        <button><img id = "cloud" src = "./assets/images/Cloud.jpg.jpg"></button>
+        <button><img id = "squall" src = "./assets/images/Squall.jpg.png"></button>
+        <button><img id = "tidus" src = "./assets/images/Tidus.jpg.png"></button>
+        <button><img id = "noctis" src = "./assets/images/Noctis.jpg.jpg"></button>
     </div>
     
     <script src="./assets/javascript/game.js"></script>
