hidden all button elements, working on showing/hiding hero and enemy images

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <button><img id = "noctis" src = "./assets/images/Noctis.jpg.jpg"></button>
     </div>
     <div id="enemyselector">
-        <h3>Enemies!</h3>
+        <h3>Choose Your Enemy!</h3>
         <button><img id = "cloud" src = "./assets/images/Cloud.jpg.jpg"></button>
         <button><img id = "squall" src = "./assets/images/Squall.jpg.png"></button>
         <button><img id = "tidus" src = "./assets/images/Tidus.jpg.png"></button>
@@ -36,6 +36,7 @@
         <button><img id = "squall" src = "./assets/images/Squall.jpg.png"></button>
         <button><img id = "tidus" src = "./assets/images/Tidus.jpg.png"></button>
         <button><img id = "noctis" src = "./assets/images/Noctis.jpg.jpg"></button>
+        <div id = "enemystats">Enemy States</div>
     </div>
     <div id="herosection">
         <h3>Hero!</h3>
@@ -43,8 +44,13 @@
         <button><img id = "squall" src = "./assets/images/Squall.jpg.png"></button>
         <button><img id = "tidus" src = "./assets/images/Tidus.jpg.png"></button>
         <button><img id = "noctis" src = "./assets/images/Noctis.jpg.jpg"></button>
+        <div id = "herostats">Hero Stats</div>
+        <br>
+        <input id = "attack" type = "button" value = "Attack">
     </div>
     
+    <input id = "restart" type = "button" value = "Restart">
+
     <script src="./assets/javascript/game.js"></script>
     
 </body>
