finished game/added audio files

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
         <div id="herostats">Hero Stats</div>
     </div>
 
+    <audio id="battlemusic"><source src="./assets/images/Battle-theme.mp4"></audio>
+    <audio id="victorymusic"><source src="./assets/images/Victory-theme.mp4"></audio>
     <script src="./assets/javascript/game.js"></script>
     
 </body>
