--- a/index.html
+++ b/index.html
@@ -1,57 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+    <link type="text/css" rel="stylesheet" href="./assets/css/style.css">
     <title>Document</title>
 </head>
-<body id="body">
-<!-- Create Header element for page -->
-    <h1>Final Fantasy Game!</h1>
-<!-- set up button images for each section -->
-    <div id="heroselector">
-        <h3>Choose your Hero!</h3>
-        <button id="cloud"><img src = "./assets/images/Cloud.jpg.jpg"></button>
-        <button id="squall"><img src = "./assets/images/Squall.jpg.png"></button>
-        <button id="tidus"><img src = "./assets/images/Tidus.jpg.png"></button>
-        <button id="noctis"><img src = "./assets/images/Noctis.jpg.jpg"></button>
+
+<body>
+
+    <audio id="preludetheme">
+        <source src="./assets/images/preludetheme.mp3" type="audio/mpeg">
+    </audio>
+    <audio id="battletheme">
+        <source src="./assets/images/Battle-theme.mp4" type="audio/mpeg">
+    </audio>
+    <audio id="victorytheme">
+        <source src="./assets/images/Victory-theme.mp4" type="audio/mpeg">
+    </audio>
+    <!-- JUMBOTRON -->
+    <div class="jumbotron">
+        <h1 class="display-4">Final Fantasy Dissidia</h1>
+        <p class="lead">Welcome to the world of Final Fantasy!</p>
+        <br>
+        <br>
+        <p class="lead">Select a Character from below and fight!</p>
+        <a id="character" class="btn btn-outline-light btn-lg charnav" href="#charactersection">Characters!</a>
     </div>
-    <div id="enemyselector">
-        <h3>Choose Your Enemy!</h3>
-        <button id="cloud"><img src = "./assets/images/Cloud.jpg.jpg"></button>
-        <button id="squall"><img src = "./assets/images/Squall.jpg.png"></button>
-        <button id="tidus"><img src = "./assets/images/Tidus.jpg.png"></button>
-        <button id="noctis"><img src = "./assets/images/Noctis.jpg.jpg"></button>
+    <!-- CHARACTER SELECTION -->
+    <div id="battlesection" class="container">
+        <div class="row">
+            <div id="playersection" class="col-lg-4">
+                <h1 id="playerName"></h1>
+
+            </div>
+            <div id="movessection" class="col-lg-4">
+                <h1 id="fight-header">Fight!</h1>
+                <div id="moves" class="row">
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Stats
+                        </button>
+                        <div class="dropdown-menu hero">
+                            <button id="heroName" class="dropdown-item herostats"></button>
+                            <button id="heroHealth" class="dropdown-item herostats"></button>
+                            <button id="heroStrength" class="dropdown-item herostats"></button>
+                            <button id="heroCounter" class="dropdown-item herostats"></button>
+                        </div>
+                    </div>
+                    <button id="attack" type="button" class="btn btn-danger btn-lg stat">Attack</button>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Stats
+                        </button>
+                        <div class="dropdown-menu enemy">
+                            <button id="enemyName" class="dropdown-item herostats"></button>
+                            <button id="enemyHealth" class="dropdown-item enemystats"></button>
+                            <button id="enemyStrength" class="dropdown-item enemystats"></button>
+                            <button id="enemyCounter" class="dropdown-item enemystats"></button>
+                        </div>
+                    </div>
+                </div>
+                <div id="message" class="row">
+                    <h4 id="state"></h4>
+                    <h4 id="attackmsg"></h4>
+                    <h4 id="countermsg"></h4>
+                    <button id="restart" type="button" class="btn btn-danger btn-lg stat">Fight Again!</button>
+                </div>
+
+            </div>
+            <div id="enemysection" class="col-lg-4">
+                <h1 id="enemyName"></h1>
+
+            </div>
+        </div>
+
     </div>
-    <div id="fightsection">
-        <h3>Moves!</h3>
-        <input id="attack" type="button" value="Attack">
-        <input id="restart" type="button" value="Restart">
-    </div>
-    <div id="enemysection">
-        <h3>Enemy!</h3>
-        <button class="character" id="enemy-cloud"><img src = "./assets/images/Cloud.jpg.jpg"></button>
-        <button class="character" id="enemy-squall"><img src = "./assets/images/Squall.jpg.png"></button>
-        <button class="character" id="enemy-tidus"><img src = "./assets/images/Tidus.jpg.png"></button>
-        <button class="character" id="enemy-noctis"><img src = "./assets/images/Noctis.jpg.jpg"></button>
-        <div id="enemystats">Enemy Stats</div>
-    </div>
-    <div id="herosection">
-        <h3>Hero!</h3>
-        <button class="character" id="hero-cloud"><img id = "cloud" src = "./assets/images/Cloud.jpg.jpg"></button>
-        <button class="character" id="hero-squall"><img src = "./assets/images/Squall.jpg.png"></button>
-        <button class="character" id="hero-tidus"><img src = "./assets/images/Tidus.jpg.png"></button>
-        <button class="character" id="hero-noctis"><img src = "./assets/images/Noctis.jpg.jpg"></button>
-        <div id="herostats">Hero Stats</div>
+    <div id="characterDiv" class="container">
+        <div id="charactersection" class="row">
+            <h1 id="character-header">Characters</h1>
+        </div>
+        <div class="row">
+            <div class="col-lg-4">
+                <div id="squall" class="card w-75 character">
+                    <img class="card-img-top" src="./assets/images/squall.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Squall Leonhart</h5>
+                        <p class="card-text">A young and aloof SeeD mercenary, others view him as cold and focused.</p>
+                        <button class="btn btn-primary choice" data-value="squall">Select</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div id="cloud" class="card w-75">
+                    <img class="card-img-top" src="./assets/images/Cloud.jpg.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Cloud Strife</h5>
+                        <p class="card-text">An ex S.O.L.D.I.E.R and gifted swordsman, he wields the mighty Buster Sword</p>
+                        <button class="btn btn-primary choice" data-value="cloud">Select</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div id="tidus" class="card w-75">
+                    <img class="card-img-top" src="./assets/images/Tidus.jpg.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Tidus Jechtson</h5>
+                        <p class="card-text">He is a rising star blitzball player from Zanarkand, one of Yuna's Guardians</p>
+                        <button class="btn btn-primary choice" data-value="tidus">Select</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div id="lightning" class="card w-75">
+                    <img class="card-img-top" src="./assets/images/lightning.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Lightning Farron</h5>
+                        <p class="card-text">Chosen to be a savior by the god Bhunivelze, tasked to save souls before Apocolypse.</p>
+                        <button class="btn btn-primary choice" data-value="lightning">Select</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div id="noctis" class="card w-75">
+                    <img class="card-img-top" src="./assets/images/Noctis.jpg.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Noctis Lucius Caelum</h5>
+                        <p class="card-text">Crown Prince and heir to the throne of Lucis, he can wield the power of Lucian Kings</p>
+                        <button class="btn btn-primary choice" data-value="noctis">Select</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div id="terra" class="card w-75">
+                    <img class="card-img-top" src="./assets/images/terra.jpg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Terra Branford</h5>
+                        <p class="card-text">A powerful young mage, she fights with the Returners against the evil Kefka</p>
+                        <button class="btn btn-primary choice" data-value="terra">Select</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <audio id="battlemusic"><source src="./assets/images/Battle-theme.mp4"></audio>
-    <audio id="victorymusic"><source src="./assets/images/Victory-theme.mp4"></audio>
-    <script src="./assets/javascript/game.js"></script>
-    
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="assets/javascript/game.js"></script>
 </body>
+
 </html>
